Bugzilla Bug 267158: removed the $Name$ RCS keyword from our source files. This keyword adds noise to the output of "ident libnss3.so | grep NSS" on our debug build, and appears to cause spurious CVS conflicts. r=nelsonb.